# lazylinks

./: LICENSE  README.md  pyproject.toml
lazylinks/: __init__.py  dotdict.py  lazylinks.mako  lazylinks.py  wrap.mako
scripts/: lazylinks
