[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lazylinks"
authors = [
    {name = "Samuel Colburn", email = "samuel.colburn@gmail.com"},
]
description = "Linktree-style links for lazy people"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Mako==1.2.4",
    "PyYAML==6.0",
]
dynamic = ["version"]

[project.scripts]
lazylinks = "lazylinks:main"
