[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lazylinks"
version = "0.1.1"
authors = [
    {name = "Samuel Colburn", email = "samuel.colburn@gmail.com"},
]
description = "Linktree-style links for lazy people"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "Mako==1.2.4",
    "PyYAML==6.0",
]

[project.scripts]
lazylinks = "lazylinks:main"
